<resources>
    <string name="app_name">Spartan Superway</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- Sign in/up form -->
    <string name="first_name_label_text_view">First Name</string>
    <string name="last_name_label_text_view">Last Name</string>
    <string name="email_label_text_view">Email</string>
    <string name="password_label_text_view">Password</string>
    <string name="password_confirm_label_text_view">Confirm password</string>
    <string name="first_name_hint">First</string>
    <string name="last_name_hint">Last</string>
    <string name="email_text_field_hint">example@email.com</string>
    <string name="password_text_field_hint">Password</string>
    <string name="password_confirm_text_field_hint">Confirm Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_account_text_view">Don\'t have an account? Sign up now.</string>
    <string name="sign_up_create_account_button">Create Account</string>

    <!-- MainActivity -->
    <string name="main_from_default"><b>From:</b> N/A</string>
    <string name="main_to_default"><b>To:</b> N/A</string>
    <string name="main_from_label"><b>From:</b> %1$s</string>
    <string name="main_to_label"><b>To:</b> %1$s</string>

    <!-- MainFragment -->
    <string name="eta_button_text">Estimated time arrival...</string>
    <string name="purchase_ticket_button_text">Purchase</string>
    <string name="view_tickets_button_text">View</string>
    <string name="map_bottom_text">Map?</string>
    <string name="card_type_label">Card type</string>
    <string name="card_type_hint">Visa/Mastercard</string>
    <string name="cardholder_name_label">Cardholder\'s name</string>
    <string name="cardholder_name_hint">Billy Bob</string>
    <string name="card_number_label">Card number</string>
    <string name="card_number_hint">xxxx-xxxx-xxxx-xxxx</string>
    <string name="card_expiration_date_lable">Expiration date</string>
    <string name="card_expiration_date_hint">mm-yy</string>
    <string name="card_cvc_number_label">CVC #</string>
    <string name="card_cvc_number_hint">xxx</string>
    <string name="submit_form_button">Submit</string>
    <string name="eta_default_text">You have no rides.</string>
    <string name="test_eta_info">Pickup: San Francisco\nDestination: Palo Alto\n\nYour pod is arriving to your pickup locationTextView.\n\nETA: 5 minutes</string>

    <string name="select_station_button_text">Select station</string>
    <string name="ticket_station_default_value">Select a station</string>
    <string name="ticket_date_label">Date:</string>
    <string name="ticket_time_label">Time:</string>
    <string name="ticket_from_location_label">From:</string>
    <string name="ticket_to_location_label">To:</string>

    <!-- PurchaseTicketFragment -->
    <string name="purchase_ticket_from">From: </string>
    <string name="purchase_ticket_to">To: </string>
    <string name="station_1">Station 1</string>
    <string name="station_2">Station 2</string>
    <string name="station_3">Station 3</string>
    <string name="station_4">Station 4</string>

    <string name="transition_test">transition_test</string>

    <!-- Change later -->
    <array name="spinner_locations">
        <item>Station 1</item>
        <item>Station 2</item>
        <item>Station 3</item>
        <item>Station 4</item>
    </array>

</resources>