<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:text="@string/email_label_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/emailEditText"
        android:hint="@string/email_text_field_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <TextView
        android:text="@string/password_label_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:hint="@string/password_text_field_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/signUpAccountTextView"
        android:text="@string/sign_up_account_text_view"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/signInButton"
        android:text="@string/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>