<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!-- Include 4 buttons that includes the # of each station (1-4) -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/stationOne"
            android:text="@string/station_1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/StationButton"/>

        <Button
            android:id="@+id/stationTwo"
            android:text="@string/station_2"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/StationButton"/>
        
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/stationThree"
            android:text="@string/station_3"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/StationButton"/>

        <Button
            android:id="@+id/stationFour"
            android:text="@string/station_4"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/StationButton"/>

    </LinearLayout>

</LinearLayout>