<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="@color/colorNeutral"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <View
        android:id="@+id/overlay"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/paymentContainer"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/ticket_from_location_label"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/BoldTextLabel"/>

            <TextView
                android:id="@+id/fromStationTextView"
                android:text="@string/ticket_station_default_value"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/fromButton"
                android:text="@string/select_station_button_text"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/ticket_to_location_label"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/BoldTextLabel"/>

            <TextView
                android:id="@+id/toStationTextView"
                android:text="@string/ticket_station_default_value"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/toButton"
                android:text="@string/select_station_button_text"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<TextView-->
                <!--android:text="@string/ticket_date_label"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--style="@style/BoldTextLabel"/>-->

            <!--<TextView-->
                <!--android:text="5/1/2017"-->
                <!--android:layout_weight="2"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"/>-->

            <!--<Button-->
                <!--android:text="Select date"-->
                <!--android:textSize="16sp"-->
                <!--android:layout_weight="2"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"/>-->

        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<TextView-->
                <!--android:text="@string/ticket_time_label"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--style="@style/BoldTextLabel"/>-->

            <!--<TextView-->
                <!--android:text="12:00 PM"-->
                <!--android:layout_weight="2"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"/>-->

            <!--<Button-->
                <!--android:text="Set time"-->
                <!--android:textSize="16sp"-->
                <!--android:layout_weight="2"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"/>-->

        <!--</LinearLayout>-->

        <FrameLayout
            android:id="@+id/square"
            android:background="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:alpha=".5"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/purchaseTicketButton"
                android:text="Purchase"
                android:enabled="false"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

        </FrameLayout>
    </LinearLayout>
</RelativeLayout>